# popcat-wrapper

./: .gitignore  .playground  .readthedocs.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py  test_example.py
docs/: api_reference.md  changelog.md  conf.py  contributing.md  examples.md  index.md  quickstart.md  requirements.txt
docs/_static/: .gitkeep
popcat/: __init__.py  text.py
popcat_wrapper/: __init__.py  classes.py  image.py  meme.py  random.py  utilities.py
popcatapi_wrapper/: __init__.py  data.py
tests/: __init__.py  test_classes.py  test_data.py  test_image.py  test_meme.py  testrandom.py
